--- a/src/main/resources/static/_index.html
+++ b/src/main/resources/static/_index.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>quartz-vue-admin</title>
+    <!--<link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
+    <title>sub-vue-test</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but quartz-vue-admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but vue-test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <span>
+      _achoiindexzzzz html
+    </span>
   </body>
 </html>
