--- a/src/main/resources/static/_index.html
+++ b/src/main/resources/static/_index.html
@@ -7,7 +7,7 @@
     <!--<link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
     <title>sub-vue-test</title>
   </head>
-  <body>
+  <body style="margin: 0px">
     <noscript>
       <strong>We're sorry but vue-test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
